// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accordion Many Panels Expandable 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="accordion"
    >
      <div
        className="accordion__panel"
      >
        <div
          aria-controls="accordion-unique-id-4"
          aria-expanded="false"
          aria-pressed="false"
          className="accordion__panel-title"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="accordion__panel-title-content"
          >
            Panel 1
          </div>
          <div
            className="accordion__panel-title-icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 fa-rotate-90 css-c1k0tt-ExpandableIcon"
                data-icon="angle-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="expandable"
        >
          <div
            className="expandable__window"
          >
            <div
              className="expandable__content"
            >
              <div
                className="accordion__panel-content"
              >
                <p>
                  This is the first panel
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="accordion__panel"
      >
        <div
          aria-controls="accordion-unique-id-5"
          aria-expanded="false"
          aria-pressed="false"
          className="accordion__panel-title"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="accordion__panel-title-content"
          >
            Panel 2
          </div>
          <div
            className="accordion__panel-title-icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 fa-rotate-90 css-c1k0tt-ExpandableIcon"
                data-icon="angle-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="expandable"
        >
          <div
            className="expandable__window"
          >
            <div
              className="expandable__content"
            >
              <div
                className="accordion__panel-content"
              >
                <p>
                  This is the second panel
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="accordion__panel"
      >
        <div
          aria-controls="accordion-unique-id-6"
          aria-expanded="false"
          aria-pressed="false"
          className="accordion__panel-title"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="accordion__panel-title-content"
          >
            Panel 3
          </div>
          <div
            className="accordion__panel-title-icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 fa-rotate-90 css-c1k0tt-ExpandableIcon"
                data-icon="angle-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="expandable"
        >
          <div
            className="expandable__window"
          >
            <div
              className="expandable__content"
            >
              <div
                className="accordion__panel-content"
              >
                <p>
                  This is the third panel
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Accordion Only One Panel Expandable 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="accordion"
    >
      <div
        className="accordion__panel"
      >
        <div
          aria-controls="accordion-unique-id-1"
          aria-expanded="false"
          aria-pressed="false"
          className="accordion__panel-title"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="accordion__panel-title-content"
          >
            Panel 1
          </div>
          <div
            className="accordion__panel-title-icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 fa-rotate-90 css-c1k0tt-ExpandableIcon"
                data-icon="angle-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="expandable"
        >
          <div
            className="expandable__window"
          >
            <div
              className="expandable__content"
            >
              <div
                className="accordion__panel-content"
              >
                <p>
                  This is the first panel
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="accordion__panel"
      >
        <div
          aria-controls="accordion-unique-id-2"
          aria-expanded="false"
          aria-pressed="false"
          className="accordion__panel-title"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="accordion__panel-title-content"
          >
            Panel 2
          </div>
          <div
            className="accordion__panel-title-icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 fa-rotate-90 css-c1k0tt-ExpandableIcon"
                data-icon="angle-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="expandable"
        >
          <div
            className="expandable__window"
          >
            <div
              className="expandable__content"
            >
              <div
                className="accordion__panel-content"
              >
                <p>
                  This is the second panel
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="accordion__panel"
      >
        <div
          aria-controls="accordion-unique-id-3"
          aria-expanded="false"
          aria-pressed="false"
          className="accordion__panel-title"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="accordion__panel-title-content"
          >
            Panel 3
          </div>
          <div
            className="accordion__panel-title-icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 fa-rotate-90 css-c1k0tt-ExpandableIcon"
                data-icon="angle-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="expandable"
        >
          <div
            className="expandable__window"
          >
            <div
              className="expandable__content"
            >
              <div
                className="accordion__panel-content"
              >
                <p>
                  This is the third panel
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
